Fix site-logo and footer text alignment

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3231,6 +3231,7 @@ nav a {
 @media only screen and (min-width: 822px) {
 	.site-footer > .site-info {
 		display: flex;
+		align-items: center;
 		margin-top: calc(2 * var(--global--spacing-vertical));
 	}
 	.site-footer > .site-info .imprint {
