--- a/style.css
+++ b/style.css
@@ -3240,6 +3240,7 @@ nav a {
 @media only screen and (min-width: 822px) {
 	.site-footer > .site-info {
 		display: flex;
+		align-items: center;
 		margin-top: calc(2 * var(--global--spacing-vertical));
 	}
 	.site-footer > .site-info .imprint {
